- Editation of wxSFEditTextShape can be disabled by putting editDISABLED value to wxSFEditTextShape::SetEditType(EDITTYPE type) function.
- Added functions void wxSFShapeCanvas::SetGridLineMult(int multiple) and int wxSFShapeCanvas::GetGridLineMult(). If used then grid lines
  will be drawn in a distance calculated as grid size multiplicated by this value. Default value is 1.

Changes in version 1.9.2 beta (2010-06-24):
--------------------------------------------
- Switched to use wxXmlSerializer 1.3.2:
  - Error states/messages aren't displayed by using messageboxes no more. Use wxXmlSerializer::GetErrMessage()
    instead if needed.
  - Serialized data members can be converted to wxVariant (if data type is supported) via xsProperty::ToVariant()
    member function.
  - Added new macro XS_IMPLEMENT_CLONABLE_CLASS2 suitable for classes with two ancestors.
	
- Fixed possible crash occured during loading of projects containing shape classes which are not currently known (declared) in the application.
- Added missing include in ScaledDC.h file preventing wxSF from build if precompiled header were used.
- Added new helper macro SF_ADD_COMPONENT(comp, name) usefull when a shape's component should be added to its parent
  by the parent itself and not by serializer/diagram manager (typically in constructor of so called composite shape).
- Fixed build error occured during compilation of wxSFDemo sample project on wxWidgets without defined wxOPEN and wxSAVE symbols.
- Fixed drawing of non-transparent text shapes in Windows (shape border wasn't visible).
- Added new virtual function wxSFShapeCanvas::OnPreConnectionFinished() and event wxEVT_SF_LINE_BEFORE_DONE suitable for
  canceling/vetoing creation of line shape if needed (patch by foldink).
- Added new function wxSFShapeCanvas::StartInteractiveConnection(wxSFLineShape* shape, const wxPoint& pos, wxSF::ERRCODE *err = NULL)
  which can create an interactive connection from existing line shape object.